--- a/shopmanager/shopapp/weixin/templates/weixin/sampleads2.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/sampleads2.html
@@ -134,27 +134,27 @@ WeixinApi.ready(function(Api) {
         // 分享操作开始之前
         ready : function() {
             // 你可以在这里对分享的数据进行重组
-            alert("准备分享");
+            //alert("准备分享");
         },
         // 分享被用户自动取消
         cancel : function(resp) {
             // 你可以在你的页面上给用户一个小Tip，为什么要取消呢？
-            alert("分享被取消，msg=" + resp.err_msg);
+            //alert("分享被取消，msg=" + resp.err_msg);
         },
         // 分享失败了
         fail : function(resp) {
             // 分享失败了，是不是可以告诉用户：不要紧，可能是网络问题，一会儿再试试？
-            alert("分享失败，msg=" + resp.err_msg);
+            //alert("分享失败，msg=" + resp.err_msg);
         },
         // 分享成功
         confirm : function(resp) {
             // 分享成功了，我们是不是可以做一些分享统计呢？
-            alert("分享成功，msg=" + resp.err_msg);
+            alert("感谢分享！请到【审核通知】查询申请状态！");
         },
         // 整个分享过程结束
         all : function(resp,shareTo) {
             // 如果你做的是一个鼓励用户进行分享的产品，在这里是不是可以给用户一些反馈了？
-            alert("分享" + (shareTo ? "到" + shareTo : "") + "结束，msg=" + resp.err_msg);
+            //alert("分享" + (shareTo ? "到" + shareTo : "") + "结束，msg=" + resp.err_msg);
         }
     };
 
@@ -173,8 +173,8 @@ WeixinApi.ready(function(Api) {
 /*
 var imgUrl = "https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLsSjykVcEsrWrYMpcpmu0b6nQt45cBqN7GKu0ZryPNxvZ8cW4oJlqpxDjxEc53qj96Ga4bYGINjeQ/0";
 var lineLink = "http://weixin.huyi.so/weixin/sampleads/{{ pk }}/";
-var descContent = "一个星期之后，我收到了Fay寄来的礼物。一个温暖的黄色斗篷：柔软、轻盈。里面夹着一张卡片...";
-var shareTitle = "2015，给孩子最温暖的回忆！！";
+var descContent = "2015，给孩子最温暖的回忆: 一个星期之后，我收到了Fay寄来的礼物。一个温暖的黄色斗篷：柔软、轻盈。里面夹着一张卡片...";
+var shareTitle = "2015，给孩子最温暖的回忆！";
 var appid = "wxc2848fa1e1aa94b5";
 
 function shareFriend() {  
