check user validation in sampleconfirmview

--- a/shopmanager/shopapp/weixin/templates/weixin/sampleads2.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/sampleads2.html
@@ -97,10 +97,9 @@
     <div class="panel-body">
       <div class="row" style="margin-top:15px">
 	<div class="col-xs-12">
-	  <p>一、斗篷温暖放送活动由“上海齐悦家居用品有限公司”承办，微信认证公众号【齐悦母婴惠】。</p>
+	  <p>一、申请流程非常简单：关注【齐悦母婴惠】，按照提示申请即可。</p>
 	  <p>二、活动说明及详细规则，请咨询【齐悦母婴惠】（回复“1”可见）。</p>
-	  <p>三、支持温暖放送活动，欢迎妈妈们积极参与，按照流程申请。</p>
-	  <p style="color:red">四、申请结果: 公众号菜单【审核通知】进入查看。</p>
+	  <p style="color:red">三、申请结果: 进入【齐悦母婴惠】菜单【审核通知】查看。</p>
 	</div>
       </div>
     </div>
