--- a/shopmanager/shopapp/weixin/templates/weixin/sampleads2.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/sampleads2.html
@@ -16,6 +16,7 @@
   {% if identical %}
   <div class="row" id="id_donebox">
     <div class="col-xs-12">
+      {% if wx_user.subscribe %}
       <p style="color:blue">亲，您的申请已经成功提交！</p>
       <p style="color:blue">您的F码：{{ vipcode }}，快把本页分享给好友, 一起来领可爱的斗篷吧！</p>
       <p>申请结果请到【齐悦母婴惠】公众号菜单【活动中心】->【审核通知】查看。</p>
@@ -25,6 +26,11 @@
       <p style="color:red">2. 您分享的页面被朋友点击次数。</p>
       -->
       <p style="color:blue">注：分享到朋友圈后，蓝色文字朋友看不到哦！</p>
+      {% else %}
+      <p style="color:blue">亲，您的申请已经提交！</p>
+      <p style="color:blue">您的F码：{{ vipcode }}，快分享给好友使用！</p>
+      <p style="color:red">您还未关注【齐悦母婴惠】，关注后您的申请才会得到及时审核！</p>
+      {% endif %}
     </div>
   </div>
   {% endif %}
