invite result html

--- a/shopmanager/shopapp/weixin/templates/weixin/invite_result1.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/invite_result1.html
@@ -6,22 +6,27 @@
 
 <div class="container-fluid">
 
+<!--
   <div class="panel panel-default" style="margin-top:5px">
     <div class="panel-heading" style="color:orange">免费试用</div>
     <div class="panel-body">
       <p>新年大礼，200件斗篷免费送，即将开始！请点击 <a href="http://mp.weixin.qq.com/s?__biz=MzA5NTI1NjYyNg==&mid=203259157&idx=2&sn=e9e5a55ddd9525cc20c92b17d63778c7#rd">查看详情>></a></p>
     </div>
   </div>
-
-	<div class="panel panel-default" style="margin-top:5px">
+-->
+  <div class="panel panel-default" style="margin-top:5px">
     <div class="panel-heading" style="color:orange">免费试用 审核结果</div>
     <div class="panel-body">
     {% if sample_order %}
       {% if not jan_pass %}<label >您的试用申请还在审核中，请继续加油哦!</label>{% endif %}
-      <p>您的F吗使用次数: <span class="badge">{{ vip_code.usage_count  }}</span></p>
-      <p>您分享的链接点击人数: <span class="badge">{{ link_click.clicker_num  }}</span></p>
-      <p>试用得分: {{ vip_code.usage_count  }} * 5 + {{ link_click.clicker_num  }} = <span class="badge badge-success">{{ vip_code.usage_count|mul:5|add:link_click.clicker_num }}</span></p>
-     <p><span class="label label-danger">审核说明：本次免费试用活动将根据【试用得分】来选择最终试用通过名单，试用得分越高，获得试用机会越大；</span></p>
+      <p>您的F码使用人数: <span class="badge"><font style="color:red">{{ vip_code.usage_count }}</font></span></p>
+      <p>您的分享页面被点击人数: <span class="badge"><font style="color:orange">{{ link_click.clicker_num  }}</font></span></p>
+      <p>您的综合得分: <font style="color:red">{{ vip_code.usage_count  }} * 5</font> + <font style="color:orange">{{ link_click.clicker_num }}</font> = <span class="badge badge-success">{{ vip_code.usage_count|mul:5|add:link_click.clicker_num }}</span></p>
+      <p><br/></p>
+    <p style="color:#029fd6">审核说明：本次免费试用活动，将按照综合得分来审核申请。综合得分越高，审核通过几率越大！</p>
+    <p style="color:red">如果您的得分在100分以上，您将具有极大的竞争力！</p>
+    <p>快快分享您的F码专属页面吧！ <a href="/weixin/sampleads/{{ wx_user.pk }}/">Go >></a></p>
+
     {% else %}
       <p>您还没有申请试用,请点击 <a href="https://open.weixin.qq.com/connect/oauth2/authorize?appid=wxc2848fa1e1aa94b5&redirect_uri=http://weixin.huyi.so/weixin/freesamples/&response_type=code&scope=snsapi_base&state=135#wechat_redirect">申请免费试用>></a></p>
     {% endif %}
