--- a/shopmanager/shopapp/weixin/templates/weixin/sampleads2.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/sampleads2.html
@@ -167,7 +167,7 @@ WeixinApi.ready(function(Api) {
         // 分享成功
         confirm : function(resp) {
             // 分享成功了，我们是不是可以做一些分享统计呢？
-            alert("感谢分享！请到【审核通知】查询状态！");
+            //alert("感谢分享！请到【审核通知】查询状态！");
         },
         // 整个分享过程结束
         all : function(resp,shareTo) {
