--- a/shopmanager/shopapp/weixin/templates/weixin/sampleads2.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/sampleads2.html
@@ -130,7 +130,7 @@
   global_timer =  window.setInterval(slideup, 5000);
   
 // 开发阶段，开启WeixinApi的调试模式
-WeixinApi.enableDebugMode();
+//WeixinApi.enableDebugMode();
 
 // 初始化WeixinApi，等待分享
 WeixinApi.ready(function(Api) {
