--- a/shopmanager/shopapp/weixin/templates/weixin/final_list.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/final_list.html
@@ -17,7 +17,7 @@
 	{% if month == 8 or month == 9 %}
 	<p>总共{{ total }}条记录，{{ num_pages }}页（每页{{ num_per_page }}条）。名单包含中奖粉丝的手机号。</p>
 	{% else %}
-	<p>总共{{ total }}条记录，{{ num_pages }}页（每页{{ num_per_page }}条）。名单包含中奖粉丝的手机号和专属VIP邀请码被使用次数。</p>
+	<p>总共{{ total }}条记录，{{ num_pages }}页（每页{{ num_per_page }}条）。名单包含中奖粉丝的手机号，综合得分和点击次数。</p>
 	{% endif %}
 	<div class="col-xs-4">
 	  <a href="/weixin/finallist/{{ batch }}/{{ prev_page }}/{{ month }}/"><< 上一页</a>
@@ -36,7 +36,10 @@
 	{% if month == 8 or month == 9 or month == 10 %}
 	<a href="#" class="list-group-item">{{ forloop.counter }}: {{ item.0 }}</a>
 	{% else %}
-	<a href="#" class="list-group-item">{{ forloop.counter }}: {{ item.0 }}<span class="badge">{{ item.1 }}</span></a>
+	<a href="#" class="list-group-item">
+		{{ forloop.counter }}: {{ item.0 }}
+		<span class="badge">{{ item.1 }}&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;{{ item.2 }}</span>
+	</a>
 	{% endif %}
 	{% endfor %}
       </div>
