--- a/shopmanager/shopapp/weixin/templates/weixin/freesamples.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/freesamples.html
@@ -6,7 +6,14 @@
 {% block container %}
 
 <div class="container-fluid">
-
+  <div class="panel panel-default" style="margin-top:5px">
+    <div class="panel-heading" style="color:orange">免费试用 中奖名单</div>
+    <div class="panel-body">
+      <p>第一批 综合得分 140，点击次数 10 以上  <a href="/weixin/finallist/1/1/1/">中奖名单&gt;&gt;</a></p>
+      <p>第一批 综合得分 350，点击次数 20 以上  <a href="/weixin/finallist/2/1/1/">中奖名单&gt;&gt;</a></p>
+      <p>第二批中奖名单公布了，离试用结束还剩1天，还有<span style="color:red;">135</span>个名额，亲们快行动吧！</p>
+    </div>
+  </div>
   <div class="panel panel-default" style="margin-top:5px">
   <div class="panel-heading" style="color:orange">免费试用：时尚婴童斗篷</div>
   <div class="panel-body">
