--- a/shopmanager/shopapp/weixin/templates/weixin/invite_result1.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/invite_result1.html
@@ -10,7 +10,8 @@
     <div class="panel-heading" style="color:orange">免费试用 中奖名单</div>
     <div class="panel-body">
       <p>第一批 综合得分 140，点击次数 10 以上  <a href="/weixin/finallist/1/1/1/">中奖名单&gt;&gt;</a></p>
-      <p>恭喜他们！</p>
+      <p>第二批 综合得分 350，点击次数 20 以上  <a href="/weixin/finallist/2/1/1/">中奖名单&gt;&gt;</a></p>
+      <p>恭喜他们！试用名额还剩<span style="color:red;">135</span>个，亲们快点行动吧！</p>
     </div>
   </div>
 
