fix shopapp weixin freesample

--- a/shopmanager/shopapp/weixin/templates/weixin/freesamples.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/freesamples.html
@@ -11,7 +11,7 @@
     <div class="panel-body">
       <p>第一批 综合得分 140，点击次数 10 以上  <a href="/weixin/finallist/1/1/1/">中奖名单&gt;&gt;</a></p>
       <p>第一批 综合得分 350，点击次数 20 以上  <a href="/weixin/finallist/2/1/1/">中奖名单&gt;&gt;</a></p>
-      <p>第二批中奖名单公布了，离试用结束还剩1天，还有<span style="color:red;">135</span>个名额，亲们快行动吧！</p>
+      <p style="color:red;">免费试用申请已经结束了，最后一批试用名单明早10点后公布，亲们明早见！</p>
     </div>
   </div>
   <div class="panel panel-default" style="margin-top:5px">
@@ -38,7 +38,7 @@
  	</div>
       </div>
 
-    <form action="/weixin/sampleapply/" method="post" onsubmit="return check()" class="form-group">{% csrf_token %}
+    <!--<form action="/weixin/sampleapply/" method="post" onsubmit="return check()" class="form-group">{% csrf_token %}
       <input type="hidden" value="2" name="sample_pk"/>
 
       <div class="row" style="margin-top:10px">
@@ -69,12 +69,12 @@
 	  <p style="color:red">请提前关注【齐悦母婴惠】，申请待开放！</p>
         {% endif %}
 	</div>
-    </form>      
-    
+    </form>-->
+    <div class="row" style="margin-top:10px">
+     <p style="color:red">试用申请结束了，试用申请名单还在计算中...</p>
+    </div>
   </div>
 </div>
-
-
 
 <div class="row">
   <div class="col-xs-12">
