--- a/shopmanager/shopapp/weixin/templates/weixin/invite_result1.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/invite_result1.html
@@ -11,7 +11,8 @@
     <div class="panel-body">
       <p>第一批 综合得分 140，点击次数 10 以上  <a href="/weixin/finallist/1/1/1/">中奖名单&gt;&gt;</a></p>
       <p>第二批 综合得分 350，点击次数 20 以上  <a href="/weixin/finallist/2/1/1/">中奖名单&gt;&gt;</a></p>
-      <p style="color:red;">恭喜他们！免费试用申请已经结束了，最后一批 135 个试用名额明早10点后公布，亲们明早见！</p>
+      <p>第三批 综合得分 356，邀请码使用28以上  <a href="/weixin/finallist/3/1/1/">中奖名单&gt;&gt;</a></p>
+      <p style="color:red;">恭喜他们！免费试用申请已经结束了，试用名单已经全部公布，没有成功的亲们下期活动再加油哦！</p>
     </div>
   </div>
 
@@ -32,7 +33,7 @@
          <div class="row">
 	    <div class="col-xs-12">
 	      <div class="thumbnail" style="padding:3px" id="id_i1">
-			<img src="https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLtDavnT74sl95zz5cpKJTibmhSa41KX7tiaS2vP30sllElHvzdY51pwBgRZc2nDS9otNNnvHutkX7qg/0" alt="">
+			<img src="https://mmbiz.qlogo.cn/mmbiz/ibbEWWCOYbuaBu5bIBRicvqa56iak9QCnJ9FicCXiamL1PwRUgKGorhQerEWbsxBqZBXoxut7zDllAMUu0LA3M37gYA/0" alt="">
 	      </div>
 	     </div>
 	   </div>
