--- a/shopmanager/shopapp/weixin/templates/weixin/freesamples.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/freesamples.html
@@ -11,7 +11,8 @@
     <div class="panel-body">
       <p>第一批 综合得分 140，点击次数 10 以上  <a href="/weixin/finallist/1/1/1/">中奖名单&gt;&gt;</a></p>
       <p>第一批 综合得分 350，点击次数 20 以上  <a href="/weixin/finallist/2/1/1/">中奖名单&gt;&gt;</a></p>
-      <p style="color:red;">免费试用申请已经结束了，最后一批试用名单明早10点后公布，亲们明早见！</p>
+      <p>第三批 综合得分 356，邀请码使用28以上  <a href="/weixin/finallist/3/1/1/">中奖名单&gt;&gt;</a></p>
+      <p style="color:red;">免费试用申请已经结束了，试用名单已经全部公布，没有成功的亲们下期活动再加油哦！</p>
     </div>
   </div>
   <div class="panel panel-default" style="margin-top:5px">
