fix invite result code

--- a/shopmanager/shopapp/weixin/templates/weixin/freesamples.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/freesamples.html
@@ -72,7 +72,9 @@
 	</div>
     </form>-->
     <div class="row" style="margin-top:10px">
-     <p style="color:red">试用申请结束了，试用申请名单还在计算中...</p>
+    <div class="col-xs-8" style="text-align:center">
+       <p style="color:red">本期试用申请已经结束了!</p>
+     </div>
     </div>
   </div>
 </div>
